[tool.poetry]
name = "chessgame"
version = "0.1.0"
description = "A 2-player command-line chess game"
authors = ["Dan Jackson <danielj683@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
